List of user-visible changes of Public Domain Ratfor.

New in XXX
-----------
 
 * The line numbers in error messages should now be always correct, even
   when inclusion of files or expansion of macros are involved. Alas, this
   was not the case before.
 * An input line starting with `%' is always passed *truly* verbatim to
   output, without line wrapping (if the user wants to output raw fortran
   code, we expect him to know what he's doing, so we must be as
   unobtrusive as possible).  Previously, even the `%'-quoted lines were
   subjected to line wrapping, so that they did not exceed the maximum
   line lenght allowed in valid fortran code.
 * Now an underscore character `_' at the end of a line do continuation
   *only* for the next newline character, while previously it did line
   continuation up to the first non-empty line found.
   For example, with the new behaviour, the input:
     foo_

     bar
   has an output similar to:
     foo
     bar
   while with the old behaviour it had an output similar to:
     foobar
 * Tabs in input are always converted to single spaces in output, even in
   generated fortran comments.
 * If `make' is called on an unconfigured tree, and it is GNU make, it
   automatically run autoreconf and ./configure before trying to build
   the given targets.
 * Added the customary installation instruction (in file `INSTALL').

New in 1.0h
-----------

 * Extended make rules useful to maintainers, in particular with the
   addition of files `GNUmakefile' and `maint.mk'
 * Now the user can explicitly tell configure that he doesn't have (or
   doesn't want to use) a Fortran 77 compiler for the testsuite.
   This is done by setting the configure variable `RAT4_TESTSUITE_F77'
   to `NONE'.

New in 1.0g
-----------

 * The make target `clean' should now work correctly even an a already
   cleaned tree (previously it could fail if no temporary directory used
   by test scripts was present!)